<package format="3">
  <name>vzense_demo</name>
  <version>0.0.1</version>

  <description>Demonstration vzense.</description>
  <author>Iori Yanokura</author>
  <author email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</author>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ALPHABETICAL ORDER -->
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <!-- <exec_depend>realsense2_camera</exec_depend>
       <exec_depend>realsense2_camera</exec_depend> -->
  <!-- ALPHABETICAL ORDER -->

</package>
